include_directories(${Search_SOURCE_DIR}/${INC_DIR}/indexer/)
include_directories(${Search_SOURCE_DIR}/${CONTRIB_DIR}/tinyxml2/)
include_directories(${Search_SOURCE_DIR}/${CONTRIB_DIR}/murmur_hash/)
include_directories(${Search_SOURCE_DIR}/${CONTRIB_DIR}/leveldb/)
include_directories(${Search_SOURCE_DIR}/${CONTRIB_DIR}/leveldb/)
include_directories(${Search_SOURCE_DIR}/${CONTRIB_DIR}/leveldb/include/)
include_directories(${Search_SOURCE_DIR}/${CONTRIB_DIR}/leveldb/include/leveldb/)
include_directories(${Indexer_SOURCE_DIR}/${INC_DIR}/)

add_executable(indexer indexer.cpp)
#add_executable(test_index test_index.cpp)
add_library(index SHARED index_struct.cpp)

find_package(Boost COMPONENTS system filesystem REQUIRED)
if (NOT Boost_FOUND)
  message(SEND_ERROR "Failed to find boost libraries.")
  return()
else()
  include_directories(${Boost_INCLUDE_DIRS})
endif()

target_link_libraries(indexer leveldb index murmur_hash tinyxml2 common ${Boost_LIBRARIES})
target_link_libraries(index leveldb murmur_hash tinyxml2 common ${Boost_LIBRARIES})
#target_link_libraries(test_index index leveldb murmur_hash tinyxml2 common ${Boost_LIBRARIES})
